Closed Bug 311793 Opened 19 years ago Closed 19 years ago

[patch] getIntPref:withSuccess: always sets success to NO

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: englabenny, Assigned: sfraser_bugs)

References

Details

(Keywords: fixed1.8)

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051005 Firefox/1.4.1
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8b5) Gecko/20051005 Firefox/1.4.1

The PreferencesManager class has a class method:
- (int)getIntPref: (const char*)prefName withSuccess:(BOOL*)outSuccess
This method always sets *outSuccess to NO (if not NULL)

Reproducible: Always




Patch coming
Patch to use the return value of nsIPref::GetIntPref (as intented from the
beginning)
Attachment #199007 - Flags: review?(mikepinkerton)
Blocks: 311106
Assignee: mikepinkerton → sfraser_bugs
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment on attachment 199007 [details] [diff] [review]
Patch to set the success variable properly

I checked this in, as well as fixing getColorPref:withSuccess: which was also
inconsistent with setting *outSuccess.
Attachment #199007 - Flags: review?(mikepinkerton) → review+
Fixed trunk and branch. Thanks for the patch!
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: