Fix bug 311793: getIntPref:withSuccess: sometimes fails to set 'outSuccess'. Patch partiallyl by Ulrik Sverdrup.